--- a/theme/templates/admin/includes/dropdown_menu.html
+++ b/theme/templates/admin/includes/dropdown_menu.html
@@ -24,7 +24,7 @@
 						<li class="nav-separator"><span>Главное меню</span></li>
 						<li>
 							<a class="withripple" href="/admin/"><span class="icon">
-								<i class="material-icons">home</i></span><span>Главная</span>
+								<i class="material-icons">home</i></span><span>Моя активность</span>
 							</a>
 						</li>
 						{% for app in dropdown_menu_app_list %}
