--- a/theme/templates/includes/user_panel.html
+++ b/theme/templates/includes/user_panel.html
@@ -9,13 +9,13 @@
 		</div>
 	</div>
 {% ifinstalled cartridge.shop %}
-<div class="twelve columns margin-top-10">
+<div class="twelve columns">
 	{% include "shop/includes/user_panel.html" %}
 </div>
 {% endifinstalled %}
 
 {% ifinstalled mezzanine.accounts %}
-<div class="twelve columns margin-top-10 margin-bottom-5">
+<div class="twelve columns">
 	{% include "accounts/includes/user_panel.html" %}
 </div>
 {% endifinstalled %}
