--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -40,20 +40,33 @@
 </head>
 
 <body class="{% block body_class %}boxed{% endblock %}">
-<div id="wrapper">
-
-{% block top_bar %}
-<div id="top-bar">
-	<div class="container">
-		<div class="sixteen columns">
-			{% block navbar_dropdown_menu %}
-				{% page_menu "pages/menus/dropdown.html" %}
-			{% endblock%}
-		</div>
-	</div>
+{% if request.user.is_staff %}
+<div id="style-switcher">
+    <h2><a href="{% url 'admin:index' %}">Панель управления</a></h2>
+    <a href="{% url 'admin:index' %}" id="settings"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
+    <a id="open-switcher"><i class="arrow right"></i> </a>
+    <div>
+        <ul>
+        	{% if request.user.profile %}
+        		<li><a href="{% url 'admin:blog_blogpost_changelist' %}">Мой Блог</a></li>
+            	<li><a href="{% url 'admin:theme_orderitem_changelist' %}">Мой стол заказов</a></li>
+        	{% endif %}
+            {% if request.user.shop %}
+            	<li><a href="{% url 'admin:shop_product_changelist' %}">Мои товары</a></li>
+            {% endif %}
+        </ul>
+    </div>
 </div>
-
-<div class="clearfix"></div>
+{% endif %}
+<div id="wrapper">
+{% block top_bar %}
+<div class="top-bar-menu-wrapper">
+    <div class="container">
+        <div class="sixteen columns">
+            {% block navbar_dropdown_menu %} {% page_menu "pages/menus/dropdown.html" %} {% endblock%}
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block header %}
@@ -69,33 +82,37 @@
 </div>
 {% endblock %}
 
-{% block navigation %}
-<div class="container">
-<div class="sixteen columns">
-
-</div>
-</div>
-{% endblock %}
-
 
 {% nevercache %}
+{% block messages %}
 {% if messages %}
 <div class="container">
-{% for message in messages %}
-	<div class="sixteen columns">
-		<div class="notification success closeable margin-bottom-30">
-			<p>{{ message }}</p>
-			<a class="close"></a>
+	{% for message in messages %}
+		<div class="sixteen columns">
+			<div class="notification success closeable margin-bottom-10 text-center">
+				<p>{{ message }}</p>
+				<a class="close"></a>
+			</div>
 		</div>
-	</div>
-{% endfor %}
+	{% endfor %}
 </div>
 {% endif %}
+{% if request.user.is_authenticated and not request.user.profile %}
+<div class="container">
+    <div class="sixteen columns">
+        <div class="notification notice margin-bottom-10 text-center">
+            <p><span>Внимание!</span> 
+                Для того, чтобы воспользоваться всеми услугами сайта, заполните информацию в <a href="{% url 'profile_settings' %}"><span>Личном кабинете</span></a>.</p>
+        </div>
+    </div>
+</div>
+{% endif %}
+{% endblock messages %}
 {% endnevercache %}
 
 
 {% block breadcrumbs %}
-<section class="titlebar">
+<div class="titlebar">
 <div class="container">
 	<div class="sixteen columns">
 		{% block breadcrumbs_title %}
@@ -112,7 +129,7 @@
 		</nav>
 	</div>
 </div>
-</section>
+</div>
 {% endblock %}
 
 {% block slider %}
@@ -134,14 +151,6 @@
 		{% block rightsidebar %}
 		{% endblock %}
 	</div>
-	<!--<div class="container">-->
-		{# {% block product_info %} #}
-		{# {% endblock %} #}
-	<!--</div>-->
-	<!--<div class="container">-->
-		{# {% block related_products %} #}
-		{# {% endblock %} #}
-	<!--</div>-->
 {% endblock %}
 
 {% block extra_content %}
@@ -149,8 +158,7 @@
 
 
 {% block footer %}
-<div class="margin-top-50"></div>
-<div id="footer">
+<div id="footer" class="margin-top-30">
 	<div class="container">
 		<div class="four columns">
 		    <div class="footer-widget widget_text">
@@ -202,8 +210,8 @@
 </div>
 {% endblock %}
 <!-- Back To Top Button -->
-<div id="backtotop"><a href="#"></a></div>
-</div>
+<!--<div id="backtotop"><a href="#"></a></div>
+</div>-->
 {% compress js %}
 <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script>
 <script src="{% static 'js/jquery-migrate-1.2.1.min.js' %}"></script>
@@ -238,5 +246,6 @@
 
 {% block footer_js %}
 {% endblock %}
+</div>
 </body>
 </html>
